...
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginBottom="2dp"-->
                    <!--android:layout_marginRight="4dp"-->
                    <!--android:src="@drawable/ic_action_language" />-->

                    <AutoCompleteTextView
                        android:id="@+id/editText_company_url"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1.03"
                        android:background="@drawable/edittext_modified_states"
...
                        android:clipToPadding="false"
                        app:finalIcon="@drawable/ic_done_white_24dp"
                        android:padding="2dp"
                        >

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fab_verify_url"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_arrow_forward_white_24dp"
                            app:fabSize="mini"
                            app:reusable="true"
...
                    android:id="@+id/input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:fontFamily="@font/hintedlainesansregular"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName" />
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="false"
                    app:passwordToggleEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:fontFamily="@font/hintedlainesansregular"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
...
                    android:layout_margin="32dp"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/button_signin"
                    app:spinning_bar_color="@color/white"
                    app:spinning_bar_padding="6dp" />

                <!--<Button-->
                    <!--android:id="@+id/button_signin"-->
                    <!--android:layout_width="match_parent"-->
...
