...

    <string name="title_activity_client_profile" translatable="false">ClientProfile</string>
    <string name="title_activity_save" translatable="false">SaveTicket</string>
    <string name="title_activity_ticket_detail" translatable="false">TicketDetail</string>
    <string name="create_ticket_disabled_message" translatable="false">Disabled</string>
    <string name="static_shortcut_long_label" translatable="false">Create a new ticket</string>
    <string name="static_shortcut_short_label" translatable="false">Create ticket</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>

    <string name="title_activity_main" translatable="false">Faveo</string>
    <string name="create_ticket">Create ticket</string>
    <string name="my_tickets">My tickets</string>
    <string name="unassigned_tickets">Unassigned tickets</string>
...
    <string name="status">Status</string>
    <string name="email">Requestor/Email id </string>
    <string name="email1">Email</string>
    <string name="helpdesk_url">Helpdesk URL</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="api_key_optional">API Key(Optional)</string>
    <string name="empty_username">Empty username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="inbox">Inbox</string>
    <string name="loading">Loading…</string>
    <string name="message">Message</string>
...
