//package co.helpdesk.faveo.pro.frontend.activities;
//
//
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import co.helpdesk.faveo.pro.R;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
//import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withParent;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.is;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class CreateTicketActivityTest2 {
//
//    @Rule
//    public ActivityTestRule<LoginActivity> mActivityTestRule = new ActivityTestRule<>(LoginActivity.class);
//
//    @Test
//    public void createTicketActivityTest2() {
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView = onView(
//                allOf(withId(R.id.editText_company_url), isDisplayed()));
//        appCompatAutoCompleteTextView.perform(replaceText("http://"), closeSoftKeyboard());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView2 = onView(
//                allOf(withId(R.id.editText_company_url), withText("http://"), isDisplayed()));
//        appCompatAutoCompleteTextView2.perform(replaceText("http://fav"), closeSoftKeyboard());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView3 = onView(
//                allOf(withId(R.id.editText_company_url), withText("http://fav"), isDisplayed()));
//        appCompatAutoCompleteTextView3.perform(replaceText("http://faveohelpdesk.co.in/sarfraz/public"), closeSoftKeyboard());
//
//        ViewInteraction floatingActionButton = onView(
//                allOf(withId(R.id.fab_verify_url), isDisplayed()));
//        floatingActionButton.perform(click());
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.input_username), isDisplayed()));
//        appCompatEditText.perform(replaceText("demoadmin"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText2 = onView(
//                allOf(withId(R.id.input_password), isDisplayed()));
//        appCompatEditText2.perform(replaceText("demopass"), closeSoftKeyboard());
//
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.button_signin), withText("Sign In")));
//        appCompatButton.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3600000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        ViewInteraction linearLayout = onView(
//                withId(R.id.create_ticket));
//        linearLayout.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3593369);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.fname_edittext), isDisplayed()));
//        appCompatEditText3.perform(replaceText("sayar"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText4 = onView(
//                allOf(withId(R.id.lname_edittext), isDisplayed()));
//        appCompatEditText4.perform(replaceText("samanta"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText5 = onView(
//                allOf(withId(R.id.email_edittext), isDisplayed()));
//        appCompatEditText5.perform(replaceText("sayar@gmail.com"), closeSoftKeyboard());
//
//        ViewInteraction searchAutoComplete = onView(
//                allOf(withClassName(is("android.widget.SearchView$SearchAutoComplete")),
//                        withParent(allOf(withClassName(is("android.widget.LinearLayout")),
//                                withParent(withClassName(is("android.widget.LinearLayout"))))),
//                        isDisplayed()));
//        searchAutoComplete.perform(replaceText("in"), closeSoftKeyboard());
//
//        ViewInteraction appCompatTextView = onView(
//                allOf(withId(android.R.id.text1), withText("India,91"),
//                        childAtPosition(
//                                withId(R.id.listItems),
//                                1),
//                        isDisplayed()));
//        appCompatTextView.perform(click());
//
//        ViewInteraction appCompatEditText6 = onView(
//                allOf(withId(R.id.phone_edittext), isDisplayed()));
//        appCompatEditText6.perform(replaceText("8981692638"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText7 = onView(
//                allOf(withId(R.id.phone_edittext10), isDisplayed()));
//        appCompatEditText7.perform(replaceText("9740144475"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText8 = onView(
//                allOf(withId(R.id.sub_edittext), isDisplayed()));
//        appCompatEditText8.perform(replaceText("Ticket Query"), closeSoftKeyboard());
//
//        ViewInteraction appCompatSpinner = onView(
//                allOf(withId(R.id.spinner_pri), isDisplayed()));
//        appCompatSpinner.perform(click());
//
//        ViewInteraction appCompatCheckedTextView = onView(
//                allOf(withId(android.R.id.text1), withText("Low"), isDisplayed()));
//        appCompatCheckedTextView.perform(click());
//
//        ViewInteraction appCompatSpinner2 = onView(
//                allOf(withId(R.id.spinner_help), isDisplayed()));
//        appCompatSpinner2.perform(click());
//
//        ViewInteraction appCompatCheckedTextView2 = onView(
//                allOf(withId(android.R.id.text1), withText("Support query"), isDisplayed()));
//        appCompatCheckedTextView2.perform(click());
//
//        ViewInteraction appCompatEditText9 = onView(
//                allOf(withId(R.id.msg_edittext), isDisplayed()));
//        appCompatEditText9.perform(replaceText("Want to know the status of the ticket?"), closeSoftKeyboard());
//
//        ViewInteraction actionMenuItemView = onView(
//                allOf(withId(R.id.action_create), withContentDescription("Create ticket"), isDisplayed()));
//        actionMenuItemView.perform(click());
//
//    }
//
//    public static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
//}
